--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -9,7 +9,23 @@
   <div class="dashboard-section">
     <h1>대시보드</h1>
     <button onclick="location.href='index.html'" class="home-btn">홈으로</button>
-    <div id="dashboard" class="dashboard-grid"></div>
+    <button id="excel-download-all" class="excel-btn">엑셀 다운로드</button>
+    <table id="dashboard-table" class="dashboard-table">
+      <thead>
+        <tr>
+          <th>썸네일</th>
+          <th>URL</th>
+          <th>메모</th>
+          <th>생성일</th>
+          <th>블로그(주요)</th>
+          <th>상세</th>
+          <th>삭제</th>
+        </tr>
+      </thead>
+      <tbody id="dashboard-tbody">
+        <!-- JS로 데이터 렌더링 -->
+      </tbody>
+    </table>
   </div>
   <div id="modal" class="modal" style="display:none;">
     <div class="modal-content">
