--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -119,7 +119,7 @@
     }
   </style>
 </head>
-<body style="background:#f4f6fa;">
+<body style="display:none;">
   <div class="dashboard-container" style="max-width:1800px;margin:40px auto 0 auto;background:#fff;border-radius:16px;box-shadow:0 8px 20px rgba(0,0,0,0.08);padding:0;">
     <div class="dashboard-header" style="padding:36px 48px 0 48px;display:flex;align-items:center;justify-content:space-between;">
       <span class="dashboard-title" style="font-size:2.5rem;">⚡ 대시보드</span>
