--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -137,36 +137,23 @@
       <div style="display:flex;gap:8px;align-items:center;justify-content:flex-end;min-width:0;">
         <span id="userInfo" style="color:#19c37d;font-weight:700;font-size:1.18rem;min-width:90px;text-align:right;">&nbsp;</span>
         <button onclick="location.href='index.html'" class="dashboard-btn-blue" style="font-size:1.05rem;padding:10px 20px;min-width:90px;">홈으로</button>
-        <button id="excelDownload" class="dashboard-btn-blue" style="background:#198754;font-size:1.05rem;padding:10px 20px;min-width:120px;white-space:nowrap;margin-left:8px;"><i class="fas fa-file-excel"></i> 엑셀 다운로드</button>
         <button id="registerUserBtn" class="dashboard-btn-blue" style="background:#19c37d;font-size:1.05rem;padding:10px 20px;min-width:110px;white-space:nowrap;">사용자 등록</button>
         <button id="logoutBtn" class="dashboard-btn-blue" style="background:#888;font-size:1.05rem;padding:10px 20px;min-width:90px;white-space:nowrap;">로그아웃</button>
       </div>
     </div>
-    <div class="container mt-4">
-      <h2>대시보드</h2>
-      <div class="mb-3">
-        <button id="excelDownload" class="btn btn-success">
-          <i class="fas fa-file-excel"></i> 엑셀 다운로드
-        </button>
-      </div>
-      <div class="table-responsive">
-        <table class="dashboard-table" style="font-size:1.18rem;width:100%;min-width:1100px;">
-          <thead>
-            <tr>
-              <th>이미지</th>
-              <th>이미지 URL</th>
-              <th>블로그 URL</th>
-              <th>메모</th>
-              <th>소유자(ID)</th>
-              <th>상세보기</th>
-              <th>삭제</th>
-            </tr>
-          </thead>
-          <tbody id="dashboard-tbody">
-            <!-- JS로 데이터 렌더링 -->
-          </tbody>
-        </table>
-      </div>
+    <div class="dashboard-table-wrap" >
+            <th>이미지 URL</th>
+            <th>블로그 URL</th>
+            <th>메모</th>
+            <th>소유자(ID)</th>
+            <th>상세보기</th>
+            <th>삭제</th>
+          </tr>
+        </thead>
+        <tbody id="dashboard-tbody">
+          <!-- JS로 데이터 렌더링 -->
+        </tbody>
+      </table>
     </div>
   </div>
   <div id="modal" class="modal" style="display:none;">
