--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -141,7 +141,11 @@
         <button id="logoutBtn" class="dashboard-btn-blue" style="background:#888;font-size:1.05rem;padding:10px 20px;min-width:90px;white-space:nowrap;">로그아웃</button>
       </div>
     </div>
-    <div class="dashboard-table-wrap" >
+    <div class="dashboard-table-wrap" style="padding:0 64px 64px 64px;">
+      <table class="dashboard-table" style="font-size:1.18rem;width:100%;min-width:1100px;">
+        <thead>
+          <tr>
+            <th>이미지</th>
             <th>이미지 URL</th>
             <th>블로그 URL</th>
             <th>메모</th>
