--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -137,6 +137,9 @@
       <div style="display:flex;gap:8px;align-items:center;justify-content:flex-end;min-width:0;">
         <span id="userInfo" style="color:#19c37d;font-weight:700;font-size:1.18rem;min-width:90px;text-align:right;">&nbsp;</span>
         <button onclick="location.href='index.html'" class="dashboard-btn-blue" style="font-size:1.05rem;padding:10px 20px;min-width:90px;">홈으로</button>
+        <button id="excelDownload" class="dashboard-btn-blue" style="background:#198754;font-size:1.05rem;padding:10px 20px;min-width:120px;white-space:nowrap;margin-left:8px;">
+          <i class="fas fa-file-excel"></i> 엑셀 다운로드
+        </button>
         <button id="registerUserBtn" class="dashboard-btn-blue" style="background:#19c37d;font-size:1.05rem;padding:10px 20px;min-width:110px;white-space:nowrap;">사용자 등록</button>
         <button id="logoutBtn" class="dashboard-btn-blue" style="background:#888;font-size:1.05rem;padding:10px 20px;min-width:90px;white-space:nowrap;">로그아웃</button>
       </div>
