--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -110,6 +110,11 @@
       color: #1877f2;
       text-decoration: underline;
       word-break: break-all;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: block;
+      max-width: 320px;
     }
     .dashboard-blog-link {
       color: #3575e1;
