--- a/public/multi-memo.html
+++ b/public/multi-memo.html
@@ -76,6 +76,7 @@
     </form>
     <div id="multiMemoResult" class="multi-memo-result"></div>
   </div>
+  <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
   <script src="multi-memo.js"></script>
 </body>
 </html> 
