--- a/public/multi-memo.html
+++ b/public/multi-memo.html
@@ -59,7 +59,7 @@
       
       <label class="multi-memo-label">이미지 선택</label>
       <label class="custom-file-upload" style="margin-bottom:18px;">
-        <input type="file" name="image" id="multiMemoImage" required accept="image/*" multiple>
+        <input type="file" name="image" id="multiMemoImage" required accept="image/*">
         <span class="upload-icon">📁</span>
         <span class="upload-text">이미지를 선택하세요.</span>
       </label>
@@ -70,6 +70,7 @@
         <span class="upload-text">엑셀 파일을 선택하세요.</span>
       </label>
       <div id="multiMemoPreview" class="upload-preview" style="display:none;"></div>
+      <div id="multiMemoExcelName" class="upload-preview" style="display:none;"></div>
       <div style="display:flex;gap:10px;margin-bottom:0;margin-top:8px;">
         <button type="submit" class="multi-memo-btn" style="flex:1;min-width:0;background:#19c37d;">업로드</button>
       </div>
