--- a/public/multi-memo.html
+++ b/public/multi-memo.html
@@ -1,83 +1,70 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>이미지+메모 다중 URL 생성</title>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    .multi-memo-container { max-width: 600px; margin: 48px auto; background: #fff; border-radius: 18px; box-shadow: 0 4px 24px rgba(24,119,242,0.10); padding: 36px 38px; }
-    .multi-memo-title { font-size: 2.1rem; font-weight: bold; color: #1877f2; margin-bottom: 22px; }
-    .multi-memo-label { font-weight: 500; color: #1877f2; margin-bottom: 6px; display: block; }
-    .multi-memo-btn { background: #1877f2; color: #fff; border: none; border-radius: 7px; padding: 10px 28px; font-size: 1.08rem; font-weight: 500; cursor: pointer; margin: 0 0 10px 0; }
-    .multi-memo-btn:hover { background: #1456b8; }
-    .multi-memo-remove { background: #dc3545; color: #fff; border: none; border-radius: 7px; padding: 0 10px; font-size: 0.93rem; margin-left: 8px; cursor: pointer; height: 26px; min-width: 0; width: auto; line-height: 1; display: flex; align-items: center; justify-content: center; }
-    .multi-memo-remove:hover { background: #b52a37; }
-    .multi-memo-result { margin-top: 18px; }
-    .multi-memo-url { color: #1877f2; font-weight: 500; word-break: break-all; }
-    .multi-memo-input-group input[type="text"] { font-size: 1.08rem; padding: 13px 14px; border-radius: 8px; border: 1.5px solid #e3e8f0; width: 100%; }
-    .multi-memo-input-group { width: 100%; }
-    .custom-file-upload.excel-upload {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      border: 2px dashed #19c37d;
-      border-radius: 10px;
-      padding: 16px 18px;
-      background: #f8fffa;
-      color: #19c37d;
-      font-weight: 500;
-      cursor: pointer;
-      margin-bottom: 18px;
-      transition: border 0.2s, background 0.2s;
-    }
-    .custom-file-upload.excel-upload:hover {
-      border-color: #1877f2;
-      background: #eaf4ff;
-      color: #1877f2;
-    }
-    .custom-file-upload.excel-upload input[type="file"] {
-      display: none;
-    }
-    .custom-file-upload.excel-upload .upload-icon {
-      font-size: 1.6em;
-    }
-    .custom-file-upload.excel-upload .upload-text {
-      font-size: 1.08em;
-    }
-  </style>
-</head>
-<body style="background:#f4f6fa;">
-  <div class="multi-memo-container">
-    <div style="margin-bottom:32px;">
-      <div class="multi-memo-title" style="font-size:1.9rem;font-weight:650; color:#1877f2;margin-bottom:22px;text-align:left;letter-spacing:-1px;">Hwaseon 이미지 다중 URL</div>
-      <div style="display:flex;justify-content:flex-end;gap:16px;margin-bottom:0;">
-        <button onclick="location.href='index.html'" class="multi-memo-btn" style="background:#f4f6fa;color:#1877f2;border:1.5px solid #e3e9f7;padding:10px 28px;font-weight:600;font-size:1.08rem;box-shadow:none;">홈</button>
-        <button onclick="location.href='dashboard.html'" class="multi-memo-btn" style="background:#1877f2;padding:10px 28px;font-size:1.08rem;">대시보드</button>
-      </div>
-    </div>
-    <form id="multiMemoForm">
-      
-      <label class="multi-memo-label">이미지 선택</label>
-      <label class="custom-file-upload" style="margin-bottom:18px;">
-        <input type="file" name="image" id="multiMemoImage" required accept="image/*">
-        <span class="upload-icon">📁</span>
-        <span class="upload-text">이미지를 선택하세요.</span>
-      </label>
-      <label class="multi-memo-label">엑셀 파일 업로드</label>
-      <label class="custom-file-upload excel-upload">
-        <input type="file" id="multiMemoExcel" accept=".xlsx,.csv" class="form-control">
-        <span class="upload-icon">📄</span>
-        <span class="upload-text">엑셀 파일을 선택하세요.</span>
-      </label>
-      <div id="multiMemoPreview" class="upload-preview" style="display:none;"></div>
-      <div id="multiMemoExcelName" class="upload-preview" style="display:none;"></div>
-      <div style="display:flex;gap:10px;margin-bottom:0;margin-top:8px;">
-        <button type="submit" class="multi-memo-btn" style="flex:1;min-width:0;background:#19c37d;">업로드</button>
-      </div>
-    </form>
-    <div id="multiMemoResult" class="multi-memo-result"></div>
-  </div>
+  <meta charset="UTF-8" />
+  <title>이미지 다중 URL</title>
+  <link rel="stylesheet" href="multi-memo.css" />
   <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
-  <script src="multi-memo.js"></script>
+</head>
+<body>
+
+  <!-- 상단 헤더 (index와 동일 톤) -->
+  <header class="site-header">
+    <div class="site-header__inner container">
+      <a href="index.html" class="brand-link" aria-label="HWASEON">
+        <img src="hwaseon로고.png" alt="HWASEON" class="brand-logo" />
+      </a>
+      <nav class="site-nav">
+        <a href="dashboard.html">Dashboard</a>
+        <a href="login.html">Login</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="section">
+    <div class="container">
+
+      <h1 class="page-title">다중 이미지 업로드</h1>
+      <p class="page-subtitle">여러개의 이미지와 메모로 공유 URL을 생성하세요.</p>
+
+      <section class="card">
+        <form id="multiMemoForm">
+          <!-- 이미지 업로드 -->
+          <label class="form-label">IMAGE</label>
+          <label class="filebox" for="multiMemoImage">
+            <input id="multiMemoImage" name="image" type="file" accept="image/*" required />
+            <span class="filebox__icon">📁</span>
+            <span class="filebox__text">이미지를 선택하세요.</span>
+          </label>
+
+          <!-- 엑셀 업로드 -->
+          <label class="form-label">EXCEL</label>
+          <label class="filebox is-accent" for="multiMemoExcel">
+            <input id="multiMemoExcel" type="file" accept=".xlsx,.csv" />
+            <span class="filebox__icon">📄</span>
+            <span class="filebox__text">엑셀 파일을 선택하세요.</span>
+          </label>
+
+          <div id="multiMemoPreview" class="pill hidden"></div>
+          <div id="multiMemoExcelName" class="pill pill--muted hidden"></div>
+
+          <div class="actions">
+            <!-- index와 동일한 버튼 구성/톤 -->
+            <button type="button" class="btn btn--dark" onclick="location.href='index.html'">URL</button>
+            <button type="submit" class="btn">업로드</button>
+          </div>
+        </form>
+
+        <!-- 결과 영역 (script.js가 채움) -->
+        <div id="multiMemoResult" class="result">
+          <!-- script.js에서 .result-box 구조로 렌더 -->
+        </div>
+      </section>
+
+      <footer class="site-footer">© Made by HWASEON · JEONG HAE MIN</footer>
+    </div>
+  </main>
+
+  <script src="script.js"></script>
 </body>
-</html> 
+</html>
