--- a/public/login.html
+++ b/public/login.html
@@ -22,11 +22,9 @@
     <!-- 사용자 로그인 폼 -->
     <form id="userLoginForm" class="active">
       <div class="login-form-group">
-        <label for="username">아이디</label>
         <input type="text" id="username" placeholder="아이디를 입력하세요" autocomplete="username" />
       </div>
       <div class="login-form-group">
-        <label for="password">비밀번호</label>
         <input type="password" id="password" placeholder="비밀번호를 입력하세요" autocomplete="current-password" />
       </div>
       <button type="submit" class="login-btn">로그인</button>
@@ -35,10 +33,9 @@
     <!-- 관리자 로그인 폼 -->
     <form id="adminLoginForm" class="hidden">
       <div class="login-form-group">
-        <label for="adminPassword">관리자 비밀번호</label>
         <input type="password" id="adminPassword" placeholder="관리자 비밀번호를 입력하세요" autocomplete="current-password" />
       </div>
-      <button type="submit" class="login-btn">관리자 로그인</button>
+      <button type="submit" class="login-btn">로그인</button>
     </form>
 
     <div id="errorMessage" class="error-message"></div>
